--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ build-backend = "hatchling.build"
 
 [project] 
 name = "cycleosmdata"
-version = "0.0.2.4"
+version = "0.0.2.5"
 description = "A small package to download structured bike infrastructure data from Open Street Map (OSM)."
 readme = "README.md"
 authors = [
@@ -27,7 +27,7 @@ classifiers = [
 ]
 
 [project.urls]
-homepage = "https://github.com/Bikingman/cycleosm"
-documentation = 'https://github.com/Bikingman/cycleosm'
-repository = 'https://github.com/Bikingman/cycleosm'
-"Bug Tracker" = "https://github.com/Bikingman/cycleosm/issues"
+homepage = "https://github.com/Bikingman/cycleosmdata"
+documentation = 'https://github.com/Bikingman/cycleosmdata'
+repository = 'https://github.com/Bikingman/cycleosmdata'
+"Bug Tracker" = "https://github.com/Bikingman/cycleosmdata/issues"
